Initial commit: AmEx ML pipeline skeleton with preprocessing + EDA

--- a/.gitignore
+++ b/.gitignore
@@ -8,30 +8,41 @@ Thumbs.db
 # ----- Python build/cache -----
 __pycache__/
 *.py[cod]
+*.pyo
 *.egg-info/
 .eggs/
 dist/
 build/
 
 # ----- Virtual environments -----
-# Ignore the whole venv you showed (lots of binaries)
 venv/
 .env/
 .venv/
 
 # ----- Jupyter -----
 .ipynb_checkpoints/
-# Keep notebooks, but ignore autosave/hidden
 .notebooks_tmp/
 
 # ----- Logs -----
 logs/
+*.log
 !logs/.gitkeep
 
-# ----- Data (don’t commit raw CSVs) -----
+# ----- Data -----
+# Raw data
 notebooks/data/
-# If you ever want to track a tiny sample, uncomment next line and add a small file
-#!notebooks/data/sample_*.csv
+data/train_data.csv
+data/test_data.csv
+
+# Processed/Refined data
+notebooks/refined_data/
+notebooks/stage1/
+data/stage/refined_data/
+*.parquet
+
+# Temporary/Sample data
+test_data/
+*.csv
 
 # ----- Large/model artifacts -----
 *.pkl
@@ -47,5 +58,5 @@ notebooks/data/
 .env.*
 kaggle.json
 
-# ----- Misc project files that shouldn’t be tracked -----
+# ----- Misc project files -----
 structure.txt
